added implementation logic
