# python-fastapi-server/app/implementation.py
@@ -1,7 +1,8 @@
 """basket API implementation
 """
 from datetime import datetime
-from .models import SlotValidationnumericRequest, SlotValidationFiniteValuesRequest, SlotValidationResult
+from fastapi import HTTPException
+from .models import SlotValidationNumericRequest, SlotValidationFiniteValuesRequest, SlotValidationResult
 
 class Implementation():
     # get_time -- Synchronisation point for meld
@@ -13,8 +14,9 @@ class Implementation():
         return datetime.now().isoformat()
 
     @staticmethod
-    def validate_numeric_entity(body: SlotValidationnumericRequest = None, *args, **kwargs):
+    def validate_numeric_entity(body: SlotValidationNumericRequest = None, *args, **kwargs):
         """
+        Problem Statement:
         Validate an entity on the basis of its value extracted.
         The method will check if that value satisfies the numeric numerics put on it.
         If there are no numeric numerics, it will simply assume the value is valid.
@@ -33,16 +35,45 @@ class Implementation():
         :param key: Dict key to use in the params returned
         :param numeric: Conditional expression for numerics on the numeric values extracted
         :param var_name: Name of the var used to express the numeric numeric
-        :return: a tuple of (filled, partially_filled, trigger, params)    """
-        return dict(
-            filled=True,
-            partially_filled=False,
-            trigger="Hello",
-            parameters="ChCha")
-
-    @staticmethod
-    def validate_finite_values_entity(body: SlotValidationFiniteValuesRequest = None, *args, **kwargs):
+        :return: a tuple of (filled, partially_filled, trigger, params)    
+        ...
+        filled : True if all values are valid
+        partially_filled:
+            True when a subset of values are valid
+            True when there are values and none of them are valid
         """
+
+        trigger = "" if body.values else body.invalid_trigger 
+        valid_values = []
+        if body.pick_first and body.values:
+            value = body.values[0]
+            if body.constraint and not eval(body.constraint, {}, {body.var_name: int(value.value)}):
+                    trigger = body.invalid_trigger
+            else:
+                valid_values = int(value.value)
+        elif body.support_multiple:
+            for value in body.values:
+                if body.constraint and not eval(body.constraint, {}, {body.var_name: int(value.value)}):
+                    trigger = body.invalid_trigger
+                else:
+                    valid_values.append(int(value.value))
+        else:
+            raise HTTPException(status_code=400, detail="pick_first and support_multiple cannot be both true")
+
+        partially_filled = (bool(valid_values) and bool(trigger)) or (bool(body.values) and not bool(valid_values))
+        filled = bool(valid_values) and not bool(trigger)
+        parameters = {body.key: valid_values} if valid_values else {}
+        return dict( 
+            filled=filled, 
+            partially_filled=partially_filled,
+            trigger=trigger,
+            parameters=parameters) 
+
+    @staticmethod 
+    def validate_finite_values_entity( body: SlotValidationFiniteValuesRequest = None,
+) -> SlotValidationResult:
+        """
+        Problem Statement:
         Validate an entity on the basis of its value extracted.
         The method will check if the values extracted("values" arg) lies within the finite list of supported values(arg "supported_values").
   
@@ -54,8 +85,29 @@ class Implementation():
         :param key: Dict key to use in the params returned
         :return: a tuple of (filled, partially_filled, trigger, params)    
         """
-        return dict(
-            filled=True,
-            partially_filled=False,
-            trigger="Hello",
-            parameters="ChCha")
+
+        trigger = ""
+        values = []
+        if not body.pick_first and body.support_multiple:
+            for value in body.values:
+                if value.value not in body.supported_values:
+                    trigger = body.invalid_trigger
+                else:
+                    values.append(value.value.upper())
+        elif body.pick_first and not body.support_multiple:
+            value = body.values[0]
+            if value.value not in body.supported_values:
+                    trigger = body.invalid_trigger
+            else:
+                values = value.value.upper()
+                
+        else:
+            raise HTTPException(status_code=400, detail="pick_first and support_multiple cannot be same")
+        partially_filled = bool(values) and bool(trigger)
+        filled = bool(values) and not bool(trigger)
+        parameters = {body.key: values} if values and not trigger  else {}
+        return dict( 
+            filled=filled, 
+            partially_filled=partially_filled,
+            trigger=trigger,
+            parameters=parameters)
