# python-fastapi-server/app/main.py
@@ -1,6 +1,6 @@
 # generated by fastapi-codegen:
 #   filename:  swagger.yaml
-#   timestamp: 2020-11-02T18:00:05+00:00
+#   timestamp: 2020-11-03T21:13:41+00:00
 
 from __future__ import annotations
 
@@ -8,7 +8,7 @@ from fastapi import FastAPI
 
 from .models import (
     SlotValidationFiniteValuesRequest,
-    SlotValidationnumericRequest,
+    SlotValidationNumericRequest,
     SlotValidationResult,
     Time,
 )
@@ -42,6 +42,6 @@ def validate_finite_values_entity(
 
 @app.post('/validate-numeric-entity/', response_model=SlotValidationResult)
 def validate_numeric_entity(
-    body: SlotValidationnumericRequest = None,
+    body: SlotValidationNumericRequest = None,
 ) -> SlotValidationResult:
     return implementation.validate_numeric_entity(body)
