# python-fastapi-server/app/models.py
@@ -1,8 +1,8 @@
 # generated by datamodel-codegen:
 #   filename:  ../swagger.yaml
-#   timestamp: 2020-11-02T18:00:05+00:00
+#   timestamp: 2020-11-03T21:13:41+00:00
 
-from typing import List, Optional
+from typing import Any, Dict, List, Optional
 
 from pydantic import BaseModel
 
@@ -12,15 +12,16 @@ class Value(BaseModel):
     value: Optional[str] = None
 
 
-class SlotValidationnumericRequest(BaseModel):
+class SlotValidationNumericRequest(BaseModel):
     invalid_trigger: Optional[str] = None
     key: Optional[str] = None
     name: Optional[str] = None
     reuse: Optional[bool] = None
-    pick_first: Optional[bool] = None
+    pick_first: Optional[bool] = False
+    support_multiple: Optional[bool] = True
     type: Optional[List[str]] = None
     validation_parser: Optional[str] = None
-    numeric: Optional[str] = None
+    constraint: Optional[str] = None
     var_name: Optional[str] = None
     values: Optional[List[Value]] = None
 
@@ -30,8 +31,8 @@ class SlotValidationFiniteValuesRequest(BaseModel):
     key: Optional[str] = None
     name: Optional[str] = None
     reuse: Optional[bool] = None
-    support_multiple: Optional[bool] = None
-    pick_first: Optional[bool] = None
+    support_multiple: Optional[bool] = True
+    pick_first: Optional[bool] = False
     supported_values: Optional[List[str]] = None
     type: Optional[List[str]] = None
     validation_parser: Optional[str] = None
@@ -42,7 +43,7 @@ class SlotValidationResult(BaseModel):
     filled: Optional[bool] = None
     partially_filled: Optional[bool] = None
     trigger: Optional[str] = None
-    parameters: Optional[str] = None
+    parameters: Optional[Dict[str, Any]] = None
 
 
 class Time(BaseModel):
